# peer-os

./: .gitignore  .mailmap  1  Jenkinsfile  Readme.md  aws_set_ip.sh  build.gradle  dependencies.gradle  gradle.properties  install.sh  node-approve  packages.txt  pom.xml  readme.md  run_tests.sh  run_tests_qa.sh  serenity.properties  settings.gradle  sshaskpass.sh  test
Subutai-playbooks/: run_tests_qa.sh
agent/: .gitignore  .gitignore~  Makefile  README.txt  Readme.md  cpu.pprof  main.go  mem.pprof  xx
agent/agent/Daemon-autoconfmake/: DAEMON.cpp  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.ac~
agent/agent/Daemon-autoconfmake/.deps/: DAEMON.Po
agent/agent/Daemon-autoconfmake/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
awsdeploy/: awsdeploy  cloud.cfg
big-data/: .gitignore  .gitmodules  create_master_template_package.sh  create_template_package.sh  create_templates_main.sh  jenkins@172.16.1.178  jenkins_dependencies.txt  pack-funcs
cli/: .gitignore  Makefile  root@management1
cli-dev/: .gitignore  Makefile  Readme.md
cli-management/: .gitignore  Makefile  Readme.md
cli-net/: .gitignore  Makefile  Readme.md
cli-net-dev/: Makefile
cli-unprivileged/: .gitignore  Makefile  Notes.md  devlist
docs/: release-management.md
host-scripts/: .gitignore  Notes.md  Readme.md  install.sh  uninstall.sh
keyspace/: kiskis.sql
management/: .gitignore  README  Readme.md  build.gradle  dependencies.gradle  gradle.properties  hardcoded-fix.md  pom.xml  (+2 more)
(+17427 files in other folders)
